# todo-cli

./: Cargo.toml  LICENSE  README.md  justfile
src/: cli.rs  db.rs  deadline.rs  display.rs  lib.rs  main.rs  task.rs
tests/: test-todo.rs
