[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
assert_cmd = "2.1.2"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
dialoguer = "0.12.0"
directories = "6.0.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
sha1 = "0.10.6"
tabled = { version = "0.20.0", features = ["ansi"] }
tempfile = "3.24.0"
